# csi-whofi

./: .gitignore  README.md  best_model.pth  done.md  evaluate.py  explanation.md  import_test.py  inspect_dataset.py  inspect_mat_file.py  planning.md  product-requirements-document.md  pyproject.toml  requirements.txt  research-paper.md  system-workflow.md  tasks.md  train.py
scripts/: download_dataset.py
tests/: test_loss.py  test_metrics.py  test_model.py  test_sampler.py
who_fi/: data.py  loss.py  metrics.py  model.py  sampler.py
who_fi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
