[project]
name = "who_fi"
version = "0.1.0"
description = "A reimplementation of the WhoFi paper for person re-identification using Wi-Fi CSI."
dependencies = [
    "gdown",
    "numpy",
    "requests",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.8.0%2Bcpu-cp312-cp312-linux_x86_64.whl#sha256=d16223b313462f243f78acef98a85354e6a4b8c9b83b38c3866b865f3f019f2d",
    "tqdm",
    "typing-extensions",
    "urllib3"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
