[project]
name = "who_fi"
version = "0.1.0"
description = "A reimplementation of the WhoFi paper for person re-identification using Wi-Fi CSI."
dependencies = [
    "gdown",
    "numpy",
    "requests",
    "torch",
    "torchvision",
    "torchaudio",
    "tqdm",
    "typing-extensions",
    "urllib3",
    "scipy"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["who_fi*"]
exclude = ["data*"]
